--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto Redes Sociais</title>
+    <style>
+        body {
+
+        }
+    </style>
 </head>
 <body>
     <h1>ola, mundo</h1>
+    <h2></h2>
 
-    
+
 </body>
 </html>
