--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
         body {
 
         }
+
+        h1 {
+
+        }
     </style>
 </head>
 <body>
     <h1>ola, mundo</h1>
-    <h2></h2>
+
+    <h1>projeto</h1>
+
+    <h1>social</h1>
+
+    <h1></h1>
 
 
 </body>
