--- a/index.html
+++ b/index.html
@@ -4,26 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
-    <style>
-        body {
-
-        }
-
-        h1 {
-
-        }
-    </style>
 </head>
 <body>
-    <h1>ola, mundo</h1>
+    <main>
+        <section id="telefone">
 
-    <h1>projeto</h1>
+        </section>
+        <section id="redes-sociais">
 
-    <h1>social</h1>
-
-    <h1></h1>
-
-
+        </section>
+    </main>
 </body>
 </html>
