criação de telas

--- a/instagram.html
+++ b/instagram.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="" alt="">
+    <img src="imagens/telainstagram.jpeg" alt="">
 
-    <a href="" target="_blank">ACESSE</a>
+    <a href="https://www.instagram.com/natasha_queiroz/" target="_blank">ACESSE</a>
 </body>
 </html>
