--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="github">
+    <img src="imagens/git.jpeg" alt="github">
 
     <a href="https://github.com/natasha-queiroz" target="_blank">ACESSE</a>
 
