--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
 
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
 
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
 
