--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
 
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="linkedin.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
 
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
 
