--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <a href="linkedin.html" target="tela"><img src="imagens/Linkedin.ico" alt=""></a><br>
 
-            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
+            <!-- <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br> -->
 
         </section>
 
