--- a/github.html
+++ b/github.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>github</title>
+    <title>Github</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
+
     <img src="imagens/git.jpeg" alt="github">
 
     <a href="https://github.com/natasha-queiroz" target="_blank">ACESSE</a>
